# ChangeLog for sys-kernel/hardened-sources
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-kernel/hardened-sources/ChangeLog,v 1.347 2010/10/21 21:34:19 blueness Exp $

  21 Oct 2010; Anthony G. Basile <blueness@gentoo.org>
  hardened-sources-2.6.32-r22.ebuild:
  x86 stable, bug #341915

  20 Oct 2010; Anthony G. Basile <blueness@gentoo.org>
  hardened-sources-2.6.32-r22.ebuild:
  amd64 stable, bug #341915

*hardened-sources-2.6.35-r4 (20 Oct 2010)
*hardened-sources-2.6.32-r22 (20 Oct 2010)

  20 Oct 2010; Anthony G. Basile <blueness@gentoo.org>
  +hardened-sources-2.6.32-r22.ebuild, +hardened-sources-2.6.35-r4.ebuild:
  hardened-sources-2.6.32-r22 based on 2.6.32.24 + genpatches +
  grsec-2.2.0-2.6.32.24-201010191911
  hardened-sources-2.6.35-r4 based on 2.6.35.7 + genpatches +
  grsec-2.2.0-2.6.35.7-201010191911
  Addresses security bug #341801

*hardened-sources-2.6.35-r3 (16 Oct 2010)
*hardened-sources-2.6.32-r21 (16 Oct 2010)

  16 Oct 2010; Anthony G. Basile <blueness@gentoo.org>
  +hardened-sources-2.6.32-r21.ebuild, +hardened-sources-2.6.35-r3.ebuild:
  hardened-sources-2.6.32-r21 based on 2.6.32.24 + genpatches +
  grsec-2.2.0-2.6.32.24-201010121028
  hardened-sources-2.6.35-r3 based on 2.6.35.7 + genpatches +
  grsec-2.2.0-2.6.35.7-201010121028

*hardened-sources-2.6.35-r2 (07 Oct 2010)

  07 Oct 2010; Anthony G. Basile <blueness@gentoo.org>
  +hardened-sources-2.6.35-r2.ebuild:
  hardened-sources-2.6.35-r2 based on 2.6.35.7 + genpatches +
  grsec-2.2.0-2.6.35.7-201010021153

*hardened-sources-2.6.32-r20 (06 Oct 2010)

  06 Oct 2010; Anthony G. Basile <blueness@gentoo.org>
  +hardened-sources-2.6.32-r20.ebuild:
  hardened-sources-2.6.32-r20 based on 2.6.32.24 + genpatches +
  grsec-2.2.0-2.6.32.24-201010021153 

*hardened-sources-2.6.35-r1 (30 Sep 2010)
*hardened-sources-2.6.32-r19 (30 Sep 2010)

  30 Sep 2010; Anthony G. Basile <blueness@gentoo.org>