@@ -1,6 +1,15 @@
 # ChangeLog for sys-kernel/hardened-sources
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/hardened-sources/ChangeLog,v 1.347 2010/10/21 21:34:19 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/hardened-sources/ChangeLog,v 1.348 2010/10/24 10:16:07 blueness Exp $
+
+  24 Oct 2010; Anthony G. Basile <blueness@gentoo.org>
+  -hardened-sources-2.6.32-r16.ebuild, -hardened-sources-2.6.32-r17.ebuild,
+  -hardened-sources-2.6.32-r18.ebuild, -hardened-sources-2.6.32-r19.ebuild,
+  -hardened-sources-2.6.32-r20.ebuild, -hardened-sources-2.6.32-r21.ebuild,
+  -hardened-sources-2.6.34-r4.ebuild, -hardened-sources-2.6.34-r5.ebuild,
+  -hardened-sources-2.6.35.ebuild, -hardened-sources-2.6.35-r1.ebuild,
+  -hardened-sources-2.6.35-r2.ebuild, -hardened-sources-2.6.35-r3.ebuild:
+  Removing vulnerable kernels where possible, bug #341801
 
   21 Oct 2010; Anthony G. Basile <blueness@gentoo.org>
   hardened-sources-2.6.32-r22.ebuild:
